<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light">

    <Button
        android:text="@string/book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/option_word_3"
        android:layout_alignRight="@+id/option_word_2"
        android:layout_alignEnd="@+id/option_word_2"
        android:id="@+id/option_word_4" />

    <TextView
        android:text="ЗАДАНИЕ 1"
        android:layout_height="wrap_content"
        android:id="@+id/task_number_text_viev"
        android:layout_width="wrap_content"
        android:layout_marginTop="41dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="86dp"
        android:layout_marginStart="86dp" />

    <Button
        android:text="@string/cat_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option_word_1"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/trans_word"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="47dp"
        android:layout_marginStart="47dp"
        tools:background="@android:drawable/btn_default" />

    <Button
        android:text="@string/Spoon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/option_word_2"
        android:layout_alignBaseline="@+id/option_word_1"
        android:layout_alignBottom="@+id/option_word_1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="68dp"
        android:layout_marginEnd="68dp" />

    <Button
        android:text="@string/mouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:id="@+id/option_word_3"
        android:layout_below="@+id/option_word_1"
        android:layout_alignLeft="@+id/option_word_1"
        android:layout_alignStart="@+id/option_word_1" />

    <Button
        android:text="@string/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="19dp"
        android:id="@+id/next_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/trans_word"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:text="@string/cat"
        android:layout_below="@+id/task_number_text_viev"
        android:layout_toRightOf="@+id/option_word_1"
        android:layout_toEndOf="@+id/option_word_1"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp" />

</RelativeLayout>